# trilo-container-c

./: meson.build  readme.md
include/trilobite/: container.h  dlist.h  dqueue.h  queue.h  slist.h  stack.h
src/: dlist.c  dqueue.c  meson.build  queue.c  slist.c  stack.c
test/: meson.build  test_cases.c  test_cases.h  test_container_dlist.c  test_container_dqueue.c  test_container_queue.c  test_container_slist.c  test_container_stack.c
